- SPA: Interfaces (user, photo) - SPA: UserService - Photo Gallery

--- a/SharedAccounts-SPA/src/styles.css
+++ b/SharedAccounts-SPA/src/styles.css
@@ -13,13 +13,13 @@
   }
   
   .nav-tabs > li.open, .member-tabset > .nav-tabs > li:hover {
-    border-bottom: 4px solid #fbcdcf;
+    border-bottom: 4px solid #00BC8C;
   }
   
   .member-tabset > .nav-tabs > li.open > a, .member-tabset > .nav-tabs > li:hover > a {
     border: 0;
     background: none !important;
-    color: #333333;
+    color: #00BC8C;
   }
   
   .member-tabset > .nav-tabs > li.open > a > i, .member-tabset > .nav-tabs > li:hover > a > i {
@@ -31,13 +31,13 @@
   }
   
   .member-tabset > .nav-tabs > li.active {
-    border-bottom: 4px solid #E95420;
+    border-bottom: 4px solid #28A745;
     position: relative;
   }
   
   .member-tabset > .nav-tabs > li.active > a {
     border: 0 !important;
-    color: #333333;
+    color: #00BC8C;
   }
   
   .member-tabset > .nav-tabs > li.active > a > i {
@@ -46,8 +46,15 @@
   
   .member-tabset > .tab-content {
     margin-top: -3px;
-    background-color: #fff;
+    background-color: #303030;
     border: 0;
     border-top: 1px solid #eee;
     padding: 15px 0;
   }
+
+  .ngx-gallery { display: inline-block; margin-bottom: 20px; }
+
+  .ngx-gallery-layout {
+    height: 500px !important;
+    width: 500px !important;
+  } 
